Update github links

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <div class="project_content">
             <h3>Résumé site</h3>
             <p>You're lookin' at it! Built to display recent work and compile background information.</p>
-            <a href="github.com">GITHUB</a>
+            <a href="https://mskalisz.github.io/Udacity_ResumeSiteKalisz/">GITHUB</a>
           </div>
         </div>
         <div class="project_card">
@@ -296,7 +296,7 @@
           <div class="project_content">
             <h3>Blog site</h3>
             <p>Blog page created for Udacity Project 1, created using custom HTML and CSS code.</p>
-            <a href="https://mskalisz.github.io/Udacity_PersonalBlogV2/index.html">GITHUB</a>
+            <a href="https://mskalisz.github.io/Udacity_PersonalBlog/index.html">GITHUB</a>
           </div>
         </div>
       </div>
