Update Professional experience "bio"

--- a/index.html
+++ b/index.html
@@ -46,13 +46,7 @@
     <section id="section2" data-nav="Section 2" class="active-section section">
       <div class="landing__container">
         <h2>Professional Experience</h2>
-        <p>Add little bio about my journey. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum
-          metus faucibus lectus pharetra dapibus. Suspendisse potenti. Aenean aliquam elementum mi, ac euismod augue.
-          Donec eget lacinia ex. Phasellus imperdiet porta orci eget mollis. Sed convallis sollicitudin mauris ac
-          tincidunt. Donec bibendum, nulla eget bibendum consectetur, sem nisi aliquam leo, ut pulvinar quam nunc eu
-          augue. Pellentesque maximus imperdiet elit a pharetra. Duis lectus mi, aliquam in mi quis, aliquam porttitor
-          lacus. Morbi a tincidunt felis. Sed leo nunc, pharetra et elementum non, faucibus vitae elit. Integer nec
-          libero venenatis libero ultricies molestie semper in tellus. Sed congue et odio sed euismod.</p>
+        <p>When beginning my professional career, my highest priorities were finding a job that was fast-paced and intellectually demanding with high job security and moral fulfillment. Uncovering these values led me to pursue a career in physical therapy during my undergraduate degree.  This was before I had held a full-time job and realized how highly I value other priorities, such as flexibility and opportunity for advancement. With each clinical role, I have re-assessed my values, and have come to realize that it is time for a change to a role that will be a better fit.</p>
 
         <div class="experience_card">
           <div class="experience_photo">
