Add weatherApp project card

--- a/index.html
+++ b/index.html
@@ -275,6 +275,16 @@
         <h2>Recent Projects</h2>
         <div class="project_card">
           <div class="project_photo">
+            <img src="images/screenshotWeather.png" alt="screenshotWeatherJournalApp">
+          </div>
+          <div class="project_content">
+            <h3>Weather Journal App</h3>
+            <p>App created for Udacity FrontEnd Nanodgree using Javascript. Displays weather from an API based on zip code and user input to create a "Journal" for the user.</p>
+            <a href="https://github.com/mskalisz/Udacity_WeatherJournalApp.git">GITHUB</a>
+          </div>
+        </div>
+        <div class="project_card">
+          <div class="project_photo">
             <img src="images/screenshotResume.png" alt="screenshotResume">
           </div>
           <div class="project_content">
