Add Weather App Project card

--- a/index.html
+++ b/index.html
@@ -275,6 +275,16 @@
         <h2>Recent Projects</h2>
         <div class="project_card">
           <div class="project_photo">
+            <img src="images/screenshotEvalNews.png" alt="screenshotEvalNewsApp">
+          </div>
+          <div class="project_content">
+            <h3>Evaluate News App</h3>
+            <p>App created for Udacity FrontEnd Nanodgree using Node.js, Webpack. Evaluates articles with a Meaning Cloud API based on URL.</p>
+            <a href="https://github.com/mskalisz/Udacity_EvaluateNews">GITHUB</a>
+          </div>
+        </div>
+        <div class="project_card">
+          <div class="project_photo">
             <img src="images/screenshotWeather.png" alt="screenshotWeatherJournalApp">
           </div>
           <div class="project_content">
