--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="experience_content">
             <h3>Front-End Nanodgree</h3>
             <p>Udacity</p>
-            <p><i>November 2020 - Present</i></p>
+            <p><i>November 2020 - February 2021</i></p>
             <p class="experience_discr">Self guided study focusing on front-end software engineering fundamentals,
               resulting in four custom projects.</p>
           </div>
