Add LS experience box

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
 
         <div class="experience_card">
           <div class="experience_photo">
+            <img src="images/experience_launch_school.png" alt="Launch School Logo">
+          </div>
+          <div class="experience_content">
+            <h3>Launch School Core Curriculum</h3>
+            <p>Launch School</p>
+            <p><i>February 2021 - Present</i></p>
+            <p class="experience_discr">Self guided study focusing on computer science fundamentals. Gained experienced in object-oriented programming, Ruby, JavaScript, HTML, CSS, Git and problem-solving methodologies.</p>
+          </div>
+        </div>
+        
+                <div class="experience_card">
+          <div class="experience_photo">
             <img src="images/experience_udacity.png" alt="Udacity Logo">
           </div>
           <div class="experience_content">
@@ -59,7 +71,6 @@
             <p class="experience_discr">Self guided study focusing on front-end software engineering fundamentals,
               resulting in four custom projects.</p>
           </div>
-        </div>
 
         <div class="experience_card">
           <div class="experience_photo">
