Fix big: experience card formatting

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
         </div>
         
-                <div class="experience_card">
+        <div class="experience_card">
           <div class="experience_photo">
             <img src="images/experience_udacity.png" alt="Udacity Logo">
           </div>
@@ -71,6 +71,7 @@
             <p class="experience_discr">Self guided study focusing on front-end software engineering fundamentals,
               resulting in four custom projects.</p>
           </div>
+         </div>
 
         <div class="experience_card">
           <div class="experience_photo">
