--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <section id="section1" data-nav="Section1" class="section">
         <h1>Welcome! I'm <span>Martha Kalisz</span>.</h1>
         <h2>Home</h2>
-        <h3>Front-End Developer, Physical Therapist</h3>
-        <h4>Learn more</h4>
+        <h3>Software Engineer, Physical Therapist</h3>
+        <h4>Learn more below</h4>
         <h5>Grab a PDF of my Resume</h5>
       </section>
     </header>
