Add link to resume PDF

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Home</h2>
         <h3>Software Engineer, Physical Therapist</h3>
         <h4>Learn more below</h4>
-        <h5>Grab a PDF of my Resume</h5>
+        <h5>Grab a <a href="images/kalisz_resume.pdf">PDF</a> of my Resume</h5>
       </section>
     </header>
     <!-- Each Section has an ID (used for the anchor) and 
