Update professional experience blurb

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id="section2" data-nav="Section 2" class="active-section section">
       <div class="landing__container">
         <h2>Professional Experience</h2>
-        <p>When beginning my professional career, my highest priorities were finding a job that was fast-paced and intellectually demanding with high job security and moral fulfillment. Uncovering these values led me to pursue a career in physical therapy during my undergraduate degree.  This was before I had held a full-time job and realized how highly I value other priorities, such as flexibility and opportunity for advancement. With each clinical role, I have re-assessed my values, and have come to realize that it is time for a change to a role that will be a better fit.</p>
+        <p>When beginning my professional career, my highest priorities were finding a job that was fast-paced and intellectually demanding with high job security and moral fulfillment. Uncovering these values led me to pursue a career in physical therapy, earning a Bachelor’s of Science and a Doctorate of Physical therapy along the way. This was before I had held a full-time job and realized how highly I value other priorities, such as flexibility and opportunity for advancement. With each clinical role, I have re-assessed my values, and have come to realize that it is time for a career change to a role that will be a better fit. Software engineering requires a lifelong learner who is skilled in persistent observation, astute problem solving, open communication,  and professional teamwork – all skills that I have honed in on during my career as a physical therapist and can translate to software engineering.</p>
 
         <div class="experience_card">
           <div class="experience_photo">
