Update FEND discription

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
             <h3>Front-End Nanodgree</h3>
             <p>Udacity</p>
             <p><i>November 2020 - February 2021</i></p>
-            <p class="experience_discr">Self guided study focusing on front-end software engineering fundamentals,
-              resulting in four custom projects.</p>
+            <p class="experience_discr">Self guided study focusing on front-end software engineering fundamentals, resulting in four custom projects. Explored JavaScript, HTML, CSS, SCSS, Webpack, Node.js, Git, and more.</p>
           </div>
          </div>
 
