Update skillset dots

--- a/index.html
+++ b/index.html
@@ -142,6 +142,25 @@
             </div>
           </div>
           <div class="skill">
+            <p>Teamwork</p>
+            <div class="dots">
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+            </div>
+          </div>
+          <div class="skill">
+            <p>Ruby</p>
+            <div class="dots">
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot"></span>
+            </div>
+          </div>
             <p>HTML</p>
             <div class="dots">
               <span class="dot_fill"></span>
