Update Skills section containers

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
               <span class="dot"></span>
             </div>
           </div>
+          <div class="skill">
             <p>HTML</p>
             <div class="dots">
               <span class="dot_fill"></span>
