--- a/index.html
+++ b/index.html
@@ -182,6 +182,26 @@
             </div>
           </div>
           <div class="skill">
+            <p>Git</p>
+            <div class="dots">
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot"></span>
+            </div>
+          </div>
+          <div class="skill">
+            <p>Agile</p>
+            <div class="dots">
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot"></span>
+            </div>
+          </div>
+          <div class="skill">
             <p>JavaScript</p>
             <div class="dots">
               <span class="dot_fill"></span>
