Add pluralsight experience card

--- a/index.html
+++ b/index.html
@@ -56,7 +56,19 @@
             <h3>Launch School Core Curriculum</h3>
             <p>Launch School</p>
             <p><i>February 2021 - Present</i></p>
-            <p class="experience_discr">Self guided study focusing on computer science fundamentals. Gained experienced in object-oriented programming, Ruby, JavaScript, HTML, CSS, Git and problem-solving methodologies.</p>
+            <p class="experience_discr">Self-guided study focusing on computer science fundamentals. Gained experienced in object-oriented programming, Ruby, JavaScript, HTML, CSS, Git and problem-solving methodologies.</p>
+          </div>
+        </div>
+        
+         <div class="experience_card">
+          <div class="experience_photo">
+            <img src="images/experience_pluralsight.png" alt="Pluralsight Logo">
+          </div>
+          <div class="experience_content">
+            <h3>Pluralsight Coursework</h3>
+            <p>Pluralsight</p>
+            <p><i>October 2021 - Present</i></p>
+            <p class="experience_discr">Self-guided study in Agile, Scaling Agile, Kanban, Scrum development with JIRA, Java, Spring Boot coursework.</p>
           </div>
         </div>
         
@@ -68,7 +80,7 @@
             <h3>Front-End Nanodgree</h3>
             <p>Udacity</p>
             <p><i>November 2020 - February 2021</i></p>
-            <p class="experience_discr">Self guided study focusing on front-end software engineering fundamentals, resulting in four custom projects. Explored JavaScript, HTML, CSS, SCSS, Webpack, Node.js, Git, and more.</p>
+            <p class="experience_discr">Self-guided study focusing on front-end software engineering fundamentals, resulting in four custom projects. Explored JavaScript, HTML, CSS, SCSS, Webpack, Node.js, Git, and more.</p>
           </div>
          </div>
 
