Update about me info

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             <p>My love for travel was realized and solidified with the opportunity to study abroad in Spain during my
               undergraduate studies. Through that experience, I was able to become a conversational Spanish speaker. In
               addition, I traveled within Europe with friends as well as independently, building my confidence,
-              self-determination, and autonomy.</p>
+              self-determination, and autonomy. I continue to travel as much as possible with friends and family!</p>
           </div>
         </div>
         <div class="about__me__content">
@@ -328,7 +328,7 @@
           <div class="about__me__text">
             <p>I am based in Portsmouth, NH and began pursuing software development in November 2020 while maintaining
               my full-time job as a pediatric physical therapist. I plan to continue to study and learn in my free time
-              to develop skills in front-end engineering.</p>
+              to develop skills in software engineering with a goal of changing careers as soon as my growing skillset allows.</p>
           </div>
         </div>
       </div>
