Update resume spelling

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             <img src="images/screenshotResume.png" alt="screenshotResume">
           </div>
           <div class="project_content">
-            <h3>Résumé site</h3>
+            <h3>Resumé site</h3>
             <p>You're lookin' at it! Built to display recent work and compile background information.</p>
             <a href="https://mskalisz.github.io/Udacity_ResumeSiteKalisz/">GITHUB</a>
           </div>
