--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h3>Launch School Core Curriculum</h3>
             <p>Launch School</p>
             <p><i>February 2021 - Present</i></p>
-            <p class="experience_discr">Self-guided study focusing on computer science fundamentals. Gained experienced in object-oriented programming, Ruby, JavaScript, HTML, CSS, Git and problem-solving methodologies.</p>
+            <p class="experience_discr">Self-guided study focusing on computer science fundamentals. Gained experiences in object-oriented programming, Ruby, JavaScript, HTML, CSS, Git and problem-solving methodologies.</p>
           </div>
         </div>
         
