Update pluralsight description

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h3>Pluralsight Coursework</h3>
             <p>Pluralsight</p>
             <p><i>October 2021 - Present</i></p>
-            <p class="experience_discr">Self-guided study in Agile, Scaling Agile, Kanban, Scrum development with JIRA, Java, Spring Boot coursework.</p>
+            <p class="experience_discr">Self-guided study in Agile Fundamentals, Scaling Agile, Intro to XP and Scrum, Kanban Fundamentals.</p>
           </div>
         </div>
         
