Update Launch School description

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h3>Launch School Core Curriculum</h3>
             <p>Launch School</p>
             <p><i>February 2021 - Present</i></p>
-            <p class="experience_discr">Self-guided study focusing on computer science fundamentals. Gained experiences in object-oriented programming, Ruby, JavaScript, HTML, CSS, Git and problem-solving methodologies.</p>
+            <p class="experience_discr">Self-guided study with heavy focus on computer science fundamentals. Courses completed include study of Object-Oriented Programming with Ruby, including debugging tools such as Rubocop, Git Fundamentals, and working with Regular Expressions. Focus on algorithm approach and problem solving. Courses in progress include study of JavaScript, HTML, CSS, HTTP, SQL, Web APIs, and Agile Planning. Designed, refactored, debugged small projects and games with basic coding design. </p>
           </div>
         </div>
         
