Update FEND description

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h3>Front-End Nanodgree</h3>
             <p>Udacity</p>
             <p><i>November 2020 - February 2021</i></p>
-            <p class="experience_discr">Self-guided study focusing on front-end software engineering fundamentals, resulting in four custom projects. Explored JavaScript, HTML, CSS, SCSS, Webpack, Node.js, Git, and more.</p>
+            <p class="experience_discr">Self-guided study focusing on front-end software engineering. Courses included study of HTML, CSS, Flexbox, CSS grid, the Document Object Model. Culminated in four web-based projects with responsive layouts. Basics of asynchronous JavaScript, handing HTTP requests, Web APIs, Node, Webpack, and Sass.</p>
           </div>
          </div>
 
