Update skillset to include project management skills

--- a/index.html
+++ b/index.html
@@ -194,6 +194,36 @@
             </div>
           </div>
           <div class="skill">
+            <p>Flexbox</p>
+            <div class="dots">
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+            </div>
+          </div>
+          <div class="skill">
+            <p>SASS</p>
+            <div class="dots">
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+            </div>
+          </div>
+          <div class="skill">
+            <p>JavaScript</p>
+            <div class="dots">
+              <span class="dot_fill"></span>
+              <span class="dot_fill"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+            </div>
+          </div>
+          <div class="skill">
             <p>Git</p>
             <div class="dots">
               <span class="dot_fill"></span>
@@ -214,7 +244,7 @@
             </div>
           </div>
           <div class="skill">
-            <p>JavaScript</p>
+            <p>Scrum</p>
             <div class="dots">
               <span class="dot_fill"></span>
               <span class="dot_fill"></span>
@@ -224,22 +254,12 @@
             </div>
           </div>
           <div class="skill">
-            <p>Microsoft Office</p>
+            <p>Kanban</p>
             <div class="dots">
-              <span class="dot_fill"></span>
-              <span class="dot_fill"></span>
               <span class="dot_fill"></span>
               <span class="dot_fill"></span>
               <span class="dot"></span>
-            </div>
-          </div>
-          <div class="skill">
-            <p>Google Drive</p>
-            <div class="dots">
-              <span class="dot_fill"></span>
-              <span class="dot_fill"></span>
-              <span class="dot_fill"></span>
-              <span class="dot_fill"></span>
+              <span class="dot"></span>
               <span class="dot"></span>
             </div>
           </div>
