Add project card for RB101 games

--- a/index.html
+++ b/index.html
@@ -358,6 +358,16 @@
         <h2>Recent Projects</h2>
         <div class="project_card">
           <div class="project_photo">
+            <img src="images/screenshotRB101Games.png" alt="screenshotRB101games">
+          </div>
+          <div class="project_content">
+            <h3>Selection of Games</h3>
+            <p>Various games created for Launch School's RB101 course in order to develop mastery using Ruby. Have fun playing!</p>
+            <a href="https://github.com/LaunchSchoolKalisz/Launch_School_RB101#readme">GITHUB</a>
+          </div>
+        </div>
+        <div class="project_card">
+          <div class="project_photo">
             <img src="images/screenshotEvalNews.png" alt="screenshotEvalNewsApp">
           </div>
           <div class="project_content">
